Update schema, tests, api, models, swagger docs to include an objective field for a portfolio
